# mpcube

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  config.go  cover.go  demo.tape  edit.go  edit_input.go  edit_ui.go  flake.nix  go.mod  go.sum  input.go  integrity.go  justfile  kid3.go  library.go  main.go  mpcube.1.scd  mpd.go  player.go  player_input.go  player_ui.go  result  search.go  tarpaulin-report.json  ui.go
.github/workflows/: ci.yml
src/: config.rs  input.rs  interface.rs  main.rs  mpd_client.rs  ui.rs
src/music/: mod.rs  music_client.rs  music_data.rs
src/windows/: album_window.rs  bar_window.rs  info_window.rs  mod.rs  status_window.rs  title_window.rs  volume_window.rs
