[package]
name = "mpcube"
description = "Mpd client inspired by musikube"
authors = [ "Paul Chambaz <paul.chambaz@tuta.com>" ]
homepage = "https://github.com/paulchambaz/mpcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossterm = "0.27.0"
# mpd = "0.1.0"
mpd = { git = "https://github.com/paulchambaz/rust-mpd", branch = "listallinfo" }
ratatui = { version = "0.25.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
