[package]
name = "mpcube"
description = "Simple album focused mpd terminal client"
authors = [ "Paul Chambaz <paul.chambaz@tuta.com>" ]
homepage = "https://github.com/paulchambaz/mpcube"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/mpcube"
keywords = [ "music", "player", "mpd" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
# mpd = "0.1.0"
mpd = { git = "https://github.com/paulchambaz/rust-mpd", branch = "listallinfo", version = "0.1.0" }
rand = "0.8.5"
ratatui = { version = "0.25.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
